# SonarQubeChecker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  README_RUST.md  demo.py  disable_startup_apps.ps1  example_report.md  final_optimization_steps.md  i18n.py  intellij_optimization.md  pyproject.toml  sonar-project.properties  sonarqube_checker.py  test_sonarqube_checker.py  translations.yaml  windows_services_optimization.md
.github/workflows/: ci.yml  sonarcloud.yml
features/: markdown_report.feature
features/steps/: sonarqube_steps.py
src/: client.rs  i18n.rs  lib.rs  main.rs  report.rs
src/tests/: client_tests.rs  i18n_tests.rs  integration_tests.rs  mod.rs  report_tests.rs
tests/: test_i18n.py  test_main.py  test_sonarqube_checker.py  test_sonarqube_client.py
