[package]
name = "sonarqube_checker"
version = "0.1.0"
edition = "2021"
authors = ["Denis Stepulenok <Denis.Stepulenok@kuehne-nagel.com>"]
description = "A tool to fetch project analysis data and issues from SonarQube"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = "0.4"
dotenv = "0.15"
base64 = "0.21"
anyhow = "1.0"
once_cell = "1.19"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"