[project]
name = "sonarqube-checker"
version = "1.0.0"
description = "Python CLI tool to fetch SonarQube analysis data and issues, generating Markdown reports"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "stden", email = "stden@users.noreply.github.com" }
]
keywords = ["sonarqube", "sonarcloud", "code-quality", "analysis", "reporting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "behave>=1.2.6",
]

[project.scripts]
sonarqube-checker = "sonarqube_checker:main"

[project.urls]
Homepage = "https://github.com/stden/SonarQubeChecker"
Repository = "https://github.com/stden/SonarQubeChecker"
Issues = "https://github.com/stden/SonarQubeChecker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=sonarqube_checker",
    "--cov=i18n",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
